release/0.0.4/docs/PSCloudFlare.md
---
Module Name: PSCloudFlare
Module Guid: 00000000-0000-0000-0000-000000000000
Download Help Link: https://github.com/zloeber/PSCloudFlare/release/PSCloudFlare/docs/PSCloudFlare.md
Help Version: 0.0.4
Locale: en-US
---

# PSCloudFlare Module
## Description
Cloudflare API PowerShell wrapper module

## PSCloudFlare Cmdlets
### [Add-CFFirewallRule](Add-CFFirewallRule.md)
Adds a cloudflare firewall rule.

### [Connect-CFClientAPI](Connect-CFClientAPI.md)
Connects to the CloudFlare API for future requests.

### [Get-CFCurrentZone](Get-CFCurrentZone.md)
Gets the currently targeted ZoneID.

### [Get-CFCurrentZoneID](Get-CFCurrentZoneID.md)
Gets the currently targeted ZoneID.

### [Get-CFDNSRecord](Get-CFDNSRecord.md)
List Cloudflare page rules.

### [Get-CFFirewallRule](Get-CFFirewallRule.md)
List Cloudflare firewall rules.

### [Get-CFIP](Get-CFIP.md)
Returns Cloudflare IPs.

### [Get-CFPageRule](Get-CFPageRule.md)
List Cloudflare page rules.

### [Get-CFRequestData](Get-CFRequestData.md)
Gets the parameters for a request to the Cloudflare API.

### [Get-CFTrafficLog](Get-CFTrafficLog.md)
List Cloudflare traffic logs.

### [Get-CFWAFRule](Get-CFWAFRule.md)
List Cloudflare WAF rules.

### [Get-CFWAFRuleGroup](Get-CFWAFRuleGroup.md)
List Cloudflare WAF rules.

### [Get-CFWAFRulePackage](Get-CFWAFRulePackage.md)
List Cloudflare WAF rules.

### [Get-CFZoneID](Get-CFZoneID.md)
Returns the ZoneID of the passed zone name (if it exists)

### [Invoke-CFAPI4Request](Invoke-CFAPI4Request.md)
Send REST request to Cloudflare URI.

### [Remove-CFFirewallRule](Remove-CFFirewallRule.md)
Removes a Cloudflare firewall rule.

### [Set-CFCurrentZone](Set-CFCurrentZone.md)
Sets the currently targeted zone for other functions

### [Set-CFFirewallRule](Set-CFFirewallRule.md)
Modifies a cloudflare firewall rule.

### [Set-CFRequestData](Set-CFRequestData.md)
Sets the parameters for a request to the Cloudflare API.


